Testing gitolite framework

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Graphviz - Graph Drawing Programs from AT&T Research and Lucent Bell Labs
 
 See doc/build.html for prerequisites and detailed build notes.
 
-Adding a 1st test line
+Adding a 1st test line.
 Adding a second test line
 Adding a 3rd test line
 Adding a 5th test line
