Add star node shape

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+July 2, 2013
+	- Add star node shape
+	- Add two-tone (non-gradient) fill
 February 14, 2013
 	- Release 2.30.1
 	- various build fixes
