Put space in title.

--- a/doc/libguide/libguide.tex
+++ b/doc/libguide/libguide.tex
@@ -36,7 +36,7 @@
 \begin{document}
 \bibliographystyle{alpha}
 \author{Emden R. Gansner}
-\title{Using \gviz as a Library \\
+\title{Using \gviz\ as a Library \\
 (cgraph version)}
 \maketitle
 
