--- a/cmd/lefty/lefty.1
+++ b/cmd/lefty/lefty.1
@@ -115,6 +115,9 @@ call. The default file name is
 .TP
 .B -V
 Prints the version.
+.TP
+.B -?
+Prints the usage and exits.
 .SH SEE ALSO
 .I lefty
 user guide.
