--- a/cmd/tools/gc.1
+++ b/cmd/tools/gc.1
@@ -4,7 +4,7 @@ gc \- count graph components
 .SH SYNOPSIS
 .B gc
 [
-.B \-necCaDUrs?
+.B \-necCaDUrsv?
 ]
 [ 
 .I files
@@ -49,6 +49,9 @@ Only analyze directed graphs.
 .TP
 .B \-U
 Only analyze undirected graphs.
+.TP
+.B \-v
+Verbose output.
 .TP
 .B \-?
 Print usage information.
