--- a/cmd/tools/gvgen.1
+++ b/cmd/tools/gvgen.1
@@ -4,7 +4,7 @@ gvgen \- generate graphs
 .SH SYNOPSIS
 .B gvgen
 [
-.B \-d?
+.B \-dv?
 ]
 [
 .BI -i n
@@ -197,6 +197,9 @@ Otherwise, the graph is written to standard out.
 .TP
 .B \-d
 Make the generated graph directed.
+.TP
+.B \-v
+Verbose output.
 .TP
 .B \-?
 Print usage information.
