--- a/cmd/gvmap/cluster.1
+++ b/cmd/gvmap/cluster.1
@@ -13,6 +13,9 @@ cluster \- find clusters in a graph and augment the graph with this information.
 .BI \-C k
 ]
 [
+.BI \-c k
+]
+[
 .B \-o
 .I outfile
 ]
@@ -36,6 +39,11 @@ The following options are supported:
 specifies a targeted number of clusters that should be generated.
 The specified number \fIk\fP is only a suggestion and may not be realisable. 
 If \fIk == 0\fP, the default, the number of clusters that approximately optimizes the modularity is returned.
+.TP
+.BI \-c k
+specifies clustering method.
+If \fIk == 0\fP, the default, modularity clustering will be used. 
+If \fIk == 1\fP modularity quality will be used.
 .TP
 .BI \-o outfile 
 Specifies that output should go into the file \fIoutfile\fP. By default,
