--- a/doc/infosrc/output.2
+++ b/doc/infosrc/output.2
@@ -20,10 +20,10 @@ one of the plugins, in which case, that transformation is not possible.
 <LI>
 <A NAME=ID></A>In the formats: -Tcmap, -Tcmapx, -Tsvg, -Tvml, the output generates
 'id="node#"' properties for nodes, 'id="edge#"' properties for edges, and 'id="cluster#"' properties for clusters, with the '#' replaced by an internally assigned integer. These strings can be provided instead by an externally provided "id=xxx" attribute on the object.
-Normal "\N" "\E" "\G" substitutions are applied.
+Normal "&#92;N" "&#92;E" "&#92;G" substitutions are applied.
 Externally provided id values are not used internally, and it is the use's reponsibilty to ensure
 that they are sufficiently unique for their intended downstream use.
-Note, in particular, that "\E" is not a unique id for multiedges.
+Note, in particular, that "&#92;E" is not a unique id for multiedges.
 </OL>
 </BODY>
 </HTML>
