Fix typo in man page

--- a/cmd/gvpr/gvpr.1
+++ b/cmd/gvpr/gvpr.1
@@ -922,7 +922,7 @@ a new traversal will begin with the new value of \fB$tvroot\fP. Also, set \fB$tv
 indicates the next starting node for a (directed or undirected)
 depth\(hyfirst or breadth\(hyfirst traversal of the
 graph (cf. \fB$tvtype\fP below).
-If a traversal finishes and the \fB$tvroot\fP but the \fB$tvnext\fP has been
+If a traversal finishes and the \fB$tvroot\fP has not been reset but the \fB$tvnext\fP has been
 set but not used, this node will be used as the next choice for \fB$tvroot\fP.
 The default value is \fBNULL\fP for each input graph.
 .TP
