Note addition of mingle

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+August 21, 2013
+	- Added mingle command and library for edge bundling
 August 1, 2013
 	- Release 2.32.0
 	- New version of xdot format, annotating gradient color schemes
