--- a/cmd/gvpr/gvpr.1
+++ b/cmd/gvpr/gvpr.1
@@ -3,7 +3,7 @@
 .  ns
 .  TP \\$1
 ..
-.TH GVPR 1 "4 May 2012"
+.TH GVPR 1 "29 August 2013"
 .SH NAME
 gvpr \- graph pattern scanning and processing language
 .br
@@ -99,7 +99,7 @@ Turns off warning messages.
 .B \-n
 Turns off graph read-ahead. By default, the variable \fB$NG\fP is set to the next
 graph to be processed. This requires a read of the next graph before processing the
-current graph, which may block is the next graph is only generated in response to
+current graph, which may block if the next graph is only generated in response to
 some action pertaining to the processing of the current graph.
 .TP
 .B \-V
