--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 September 5, 2013
-	- Resolves bugs: 2325, 2333, 2334, 2337, 2338, 2340, 2343,
+	- Resolves bugs: 2325, 2326, 2333, 2334, 2337, 2338, 2340, 2343,
 		2345, 2346, 2349, 2350, 2351, 2352, 2353, 2354
 	- Resolves Redhat bug: BZ#847458
 August 21, 2013
